--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "main": "./dist/worker.js",
     "scripts": {
         "format": "prettier --write '**/*.{js,css,json,md}'",
-        "build": "webpack"
+        "build-worker": "webpack",
+        "build": "parcel src/index.html"
     },
     "author": "llllvvuu",
     "license": "ISC",
     "devDependencies": {
+        "@parcel/transformer-image": "2.0.0-rc.0",
+        "@types/react": "^17.0.27",
+        "@types/react-dom": "^17.0.9",
+        "htm": "^3.1.0",
+        "parcel": "^2.0.0-rc.0",
+        "preact": "^10.5.14",
         "prettier": "^1.17.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "webpack": "^5.57.1",
         "webpack-cli": "^4.9.0"
     },
