--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "private": true,
     "version": "1.0.0",
     "description": "a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines",
-    "main": "./dist/worker.js",
     "scripts": {
         "format": "prettier --write '**/*.{js,css,json,md}'",
         "build-worker": "webpack",
-        "build": "parcel src/index.html"
+        "start": "parcel src/index.html",
+        "build": "parcel build src/index.html"
     },
     "author": "llllvvuu",
     "license": "ISC",
@@ -19,12 +19,12 @@
         "parcel": "^2.0.0-rc.0",
         "preact": "^10.5.14",
         "prettier": "^1.17.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
         "webpack": "^5.57.1",
         "webpack-cli": "^4.9.0"
     },
     "dependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "serverless-cloudflare-workers": "^1.2.0",
         "stripe-workers": "^0.11.1-beta"
     }
