split dev and start commands, fix missed backslashes in Preact => React migration, update cloudflare worker build command

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,7 +9,7 @@ workers_dev = false
 compatibility_date = "2021-10-06"
 
 [build]
-command = "npm install && npm run build-worker"
+command = "yarn && yarn build-worker && yarn build"
 
 [build.upload]
 format = "service-worker"
