--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "scripts": {
         "format": "prettier --write '**/*.{js,css,json,md}'",
         "build-worker": "webpack",
-        "start": "parcel src/index.html",
-        "build": "parcel build src/index.html"
+        "dev": "parcel src/index.html",
+        "build": "parcel build src/index.html",
+        "start": "http-server dist"
     },
     "author": "llllvvuu",
     "license": "ISC",
@@ -23,6 +24,7 @@
         "webpack-cli": "^4.9.0"
     },
     "dependencies": {
+        "http-server": "^13.0.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "serverless-cloudflare-workers": "^1.2.0",
