--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
         "start": "http-server dist",
         "typecheck": "tsc --noEmit"
     },
-    "author": "llllvvuu",
-    "license": "ISC",
+    "author": "DLR Research",
+    "license": "MIT",
+    "alias": {
+        "react": "preact/compat",
+        "react-dom": "preact/compat"
+    },
     "devDependencies": {
         "@parcel/transformer-image": "2.0.0-rc.0",
         "@types/react": "^17.0.27",
         "@types/react-dom": "^17.0.9",
-        "htm": "^3.1.0",
         "parcel": "^2.0.0-rc.0",
-        "preact": "^10.5.14",
         "prettier": "^1.17.0"
     },
     "dependencies": {
         "http-server": "^13.0.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "preact": "^10.5.14",
         "stripe-workers": "^0.11.1-beta"
     }
 }
