--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,14 @@
     "module": "esnext",
     "strict": true,
     "jsx": "react",
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node"
+    "esModuleInterop": true,
+    "importHelpers": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "moduleResolution": "node",
+    "types": [
+        "@cloudflare/workers-types"
+    ]
   },
   "include": [
     "src/**/*"
