--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
         "@types/react": "^17.0.27",
         "@types/react-dom": "^17.0.9",
         "parcel": "^2.0.0-rc.0",
-        "prettier": "^1.17.0"
+        "prettier": "^1.17.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "typescript": "^4.4.3"
     },
     "dependencies": {
         "http-server": "^13.0.2",
