--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,13 @@
   "compilerOptions": {
     "module": "esnext",
     "strict": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "esModuleInterop": true,
     "importHelpers": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "moduleResolution": "node",
-    "types": [
-        "@cloudflare/workers-types"
-    ]
+    "moduleResolution": "node"
   },
   "include": [
     "src/**/*"
