--- a/package.json
+++ b/package.json
@@ -9,25 +9,24 @@
     "semi": false
   },
   "scripts": {
-    "format": "prettier --write '**/*.{js,css,json,md}'",
+    "format": "prettier --write '**/*.{ts,tsx,js,css,json,md}'",
     "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
+    "build": "webpack --mode production && yarn prerender",
+    "build-worker": "webpack --mode production --config webpack.config.worker.js",
     "prerender": "ts-node scripts/prerender.tsx",
     "start": "http-server dist"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^2.2.2",
     "@prefresh/webpack": "^3.3.2",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
+    "@types/html-minifier": "^4.0.1",
+    "@types/node": "^16.10.3",
     "copy-webpack-plugin": "^9.0.1",
+    "html-minifier": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^1.17.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.4.3",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
