--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "nobleprize"
 type = "javascript"
-route = '*nobleprize.com/checkout'
+routes = ['*nobleprize.com/checkout', '*nobleprize.com/share/*', '*nobleprize.com/badge/*']
 account_id = 'd3934b9b324240bf989664e018097273'
 zone_id = '25683f567ebb34c35d85566ca7580bb0'
 usage_model = 'unbound'
@@ -9,7 +9,7 @@ workers_dev = false
 compatibility_date = "2021-10-06"
 
 [build]
-command = "yarn && yarn build"
+command = "yarn && yarn build-worker"
 
 [build.upload]
 format = "service-worker"
