--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "moduleResolution": "node",
+    "lib": ["esnext"],
     "types": ["node", "@cloudflare/workers-types"]
   },
   "include": ["src/**/*"]
