--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "author": "DLR Research",
   "license": "MIT",
   "main": "dist/worker.js",
-  "prettier": {
-    "semi": false
-  },
   "scripts": {
-    "format": "prettier --write '**/*.{ts,tsx,js,css,json,md}'",
+    "format": "prettier --write '**/*.{ts,tsx,js,css,json,md,html}'",
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production && yarn minify-template && yarn prerender",
     "build-worker": "yarn minify-template && webpack --mode production --config webpack.config.worker.js",
