--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production && yarn minify-template && yarn prerender",
     "build-worker": "yarn minify-template && webpack --mode production --config webpack.config.worker.js",
+    "build-worker-dev": "yarn minify-template && webpack --config webpack.config.worker.dev.js",
     "prerender": "env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ts-node scripts/prerenderFromTemplate.ts",
     "minify-template": "env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ts-node scripts/minifyTemplate.ts",
     "start": "http-server dist"
