--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "itty-router": "^2.4.4",
     "preact": "^10.5.14",
     "preact-render-to-string": "^5.1.19",
+    "react-imask": "^6.2.2",
     "stripe-workers": "^0.11.1-beta",
     "tslib": "^2.3.1"
   }
