--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@prefresh/webpack": "^3.3.2",
     "@types/html-minifier": "^4.0.1",
     "@types/node": "^16.10.3",
+    "@types/random-seed": "^0.3.3",
     "copy-webpack-plugin": "^9.0.1",
     "html-minifier": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
+    "p5": "^1.4.0",
     "prettier": "^1.17.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
@@ -36,7 +38,9 @@
     "itty-router": "^2.4.4",
     "preact": "^10.5.14",
     "preact-render-to-string": "^5.1.19",
+    "random-seed": "^0.3.0",
     "react-imask": "^6.2.2",
+    "react-p5": "^1.3.21",
     "stripe-workers": "^0.11.1-beta",
     "tslib": "^2.3.1"
   }
