--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "copy-webpack-plugin": "^9.0.1",
     "html-minifier": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
-    "p5": "^1.4.0",
     "prettier": "^1.17.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
     "webpack": "^5.58.1",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
   },
