Change domain name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nobleprize",
+  "name": "fastprize",
   "description": "a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines",
   "version": "1.0.0",
   "author": "DLR Research",
