--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@aws-sdk/client-rds-data": "^3.36.0",
     "http-server": "^13.0.2",
     "itty-router": "^2.4.4",
     "preact": "^10.5.14",
