--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.36.1",
     "@aws-sdk/client-rds-data": "^3.36.0",
     "axios": "^0.22.0",
     "http-server": "^13.0.2",
