--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "html-minifier": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
+    "mini-svg-data-uri": "^1.3.3",
     "prettier": "^1.17.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
