--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "campaigns-worker"]
-	path = campaigns-worker
+	path = submodules/campaigns-worker
 	url = https://github.com/DLR-Research/campaigns-worker.git
