--- a/package.json
+++ b/package.json
@@ -1,50 +1,23 @@
 {
-  "name": "fastprize",
-  "description": "a collective prize to recognize the scientists who contributed to the COVID-19 mRNA vaccines",
-  "version": "1.0.0",
-  "author": "DLR Research",
-  "license": "MIT",
-  "main": "dist/worker.js",
-  "scripts": {
-    "format": "prettier --write '**/*.{ts,tsx,js,css,json,md,html}'",
-    "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production && yarn minify-template && yarn build-prerenderer && node dist/prerender.js",
-    "build-worker": "yarn minify-template && webpack --mode production --config webpack.config.worker.js",
-    "build-worker-dev": "yarn minify-template && webpack --config webpack.config.worker.dev.js",
-    "build-prerenderer": "webpack --config webpack.config.prerender.js",
-    "minify-template": "env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ts-node scripts/minifyTemplate.ts",
-    "start": "http-server dist"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^2.2.2",
-    "@prefresh/webpack": "^3.3.2",
-    "@types/html-minifier": "^4.0.1",
-    "@types/node": "^16.10.3",
-    "@types/random-seed": "^0.3.3",
-    "copy-webpack-plugin": "^9.0.1",
-    "html-minifier": "^4.0.0",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-svg-data-uri": "^1.3.3",
-    "prettier": "^1.17.0",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "webpack": "^5.58.1",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
-  },
-  "dependencies": {
-    "@aws-sdk/client-lambda": "^3.36.1",
-    "@aws-sdk/client-rds-data": "^3.36.0",
-    "axios": "^0.22.0",
-    "http-server": "^13.0.2",
-    "itty-router": "^2.4.4",
-    "preact": "^10.5.14",
-    "preact-render-to-string": "^5.1.19",
-    "random-seed": "^0.3.0",
-    "react-imask": "^6.2.2",
-    "stripe-workers": "^0.11.1-beta",
-    "tslib": "^2.3.1"
-  }
+    "name": "fastprize",
+    "private": true,
+    "version": "1.0.0",
+    "scripts": {
+        "format": "prettier --write './{client,worker}/**/*.{ts,tsx,json,js,yaml,css,html}'",
+        "dev:client": "yarn workspace fastprize-client dev",
+        "build:client": "yarn workspace fastprize-client build",
+        "start:client": "yarn workspace fastprize-client start",
+        "deploy:worker": "yarn workspace fastprize-worker deploy"
+    },
+    "workspaces": {
+        "packages": [
+            "client",
+            "worker"
+        ],
+        "nohoist": [ "**" ]
+    },
+    "dependencies": {},
+    "devDependencies": {
+        "prettier": "^2.4.1"
+    }
 }
