--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,14 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "module": "es6",
     "target": "es6",
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact",
     "esModuleInterop": true,
     "importHelpers": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "moduleResolution": "node",
-    "sourceMap": true,
-    "types": ["node", "@cloudflare/workers-types"]
-  },
-  "include": ["src/**/*"]
+    "sourceMap": true
+  }
 }
