simultaneous client and server

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "version": "1.0.0",
     "scripts": {
         "format": "prettier --write './{client,worker}/**/*.{ts,tsx,json,js,yaml,css,html}'",
-        "dev:client": "yarn workspace fastprize-client dev",
+        "dev:client": "env FASTPRIZE_WORKER_PORT=6420 yarn workspace fastprize-client dev",
+        "dev:worker": "env FASTPRIZE_WORKER_PORT=6420 yarn workspace fastprize-worker dev",
+        "dev": "npm-run-all --parallel dev:*",
         "build:client": "yarn workspace fastprize-client build",
+        "build:worker": "yarn workspace fastprize-worker build",
         "start:client": "yarn workspace fastprize-client start",
         "deploy:worker": "yarn workspace fastprize-worker deploy"
     },
@@ -14,10 +17,13 @@
             "client",
             "worker"
         ],
-        "nohoist": [ "**" ]
+        "nohoist": [
+            "**"
+        ]
     },
     "dependencies": {},
     "devDependencies": {
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.4.1"
     }
 }
