--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,13 +1,13 @@
-name = "fastprize"
+name = "atomsprize"
 type = "javascript"
 routes = [
-  '*fastprize.org/checkout',
-  '*fastprize.org/share/*',
-  '*fastprize.org/stats*',
-  '*fastprize.org/badge/*'
+  '*prize.atoms.org/checkout',
+  '*prize.atoms.org/share/*',
+  '*prize.atoms.org/stats*',
+  '*prize.atoms.org/badge/*'
 ]
 account_id = 'd3934b9b324240bf989664e018097273'
-zone_id = '0e53dedb5a5794ef894d3d652149caab'
+zone_id = 'd8995f50741ada14b01a2bd2bf86ba7e'
 usage_model = 'unbound'
 compatibility_flags = []
 workers_dev = false
